--- a/lib/messagebundles/nl.po
+++ b/lib/messagebundles/nl.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 4.14.10\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-31 11:30-0400\n"
-"PO-Revision-Date: 2010-05-25 11:18+0000\n"
+"POT-Creation-Date: 2010-06-07 11:30-0400\n"
+"PO-Revision-Date: 2010-06-01 10:40+0000\n"
 "Last-Translator: Tim van der Meij <timvandermeij@gmail.com>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-06-01 03:32+0000\n"
+"X-Launchpad-Export-Date: 2010-06-08 03:32+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: components/core-api/src/main/java/org/limewire/core/api/Category.java:14
@@ -106,7 +106,7 @@ msgstr "Het bestand is beschadigd"
 
 #: components/core-api/src/main/java/org/limewire/core/api/download/DownloadItem.java:40
 msgid "The copyright holder has not authorized this for sharing"
-msgstr ""
+msgstr "De copyrightbezitter staat niet toe dat dit gedeeld wordt"
 
 #: components/core-api/src/main/java/org/limewire/core/api/download/DownloadItem.java:41
 msgid "Trouble connecting to people"
