--- a/lib/messagebundles/pt.po
+++ b/lib/messagebundles/pt.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-05-31 11:30-0400\n"
-"PO-Revision-Date: 2010-05-14 05:19+0000\n"
-"Last-Translator: João Miranda <Unknown>\n"
+"POT-Creation-Date: 2010-06-07 11:30-0400\n"
+"PO-Revision-Date: 2010-06-04 08:43+0000\n"
+"Last-Translator: maluko98 <Unknown>\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-06-01 03:33+0000\n"
+"X-Launchpad-Export-Date: 2010-06-08 03:33+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: private-components/integrated-ui/src/main/java/org/limewire/ui/swing/Initializer.java:598
